refactor: use supported syntax in testcases